# graph-llm

./: .gitignore  README.md  pyproject.toml
configs/: smoke.yaml
docs/: baselines.md  bilinear_frontend.md  front_end.md  memory_stage.md  tokenizer.md
scripts/: bench_recurrent_scan.py  eval.py  eval_report.py  probe_embedding.py  train.py  train_tokenizer.py
src/graph_llm/: __init__.py  config.py
src/graph_llm/data/: __init__.py  loader.py  reasoning_corpus.py  reasoning_tasks.py  synthetic_tasks.py
src/graph_llm/eval/: __init__.py  long_context.py  metrics.py  report.py
src/graph_llm/models/: __init__.py  bilinear_lm.py  delta_memory_lm.py  registry.py
src/graph_llm/models/baselines/: __init__.py  mamba.py  sizing.py  transformer.py
src/graph_llm/models/components/: __init__.py  bilinear_frontend.py  causal_reasoner.py  delta_memory.py  multiscale_conv_embed.py  reasoning_field.py  stacked_tandem.py
src/graph_llm/tokenizer/: __init__.py  bpe.py  phonological_init.py
src/graph_llm/train/: __init__.py  checkpoint.py  optim.py  segmented.py  tandem.py  trainer.py
src/graph_llm/utils/: logging.py  seed.py
tests/: test_baselines.py  test_bilinear.py  test_delta_memory.py  test_delta_mqar.py  test_enwik9_loader.py  test_eval_report.py  test_long_context.py  test_multihead_reasoner.py  test_multiscale_conv_embed.py  test_reasoning_corpus.py  test_reasoning_field.py  test_reasoning_tasks.py  test_segmented_checkpoint.py  test_segmented_eval_hook.py  test_segmented_training.py  test_smoke.py  test_tandem.py  test_tandem_checkpoint.py  test_tokenizer.py
