[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph_llm"
version = "0.1.0"
description = "Graph-structured LLM research artifact — non-transformer baseline suite"
requires-python = ">=3.10"
dependencies = [
    # Core runtime deps (CPU build of torch installed separately for dev;
    # GPU/CUDA build: pip install torch --index-url https://download.pytorch.org/whl/cu121)
    "torch>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "einops>=0.7",
    "datasets>=2.18",
    "tokenizers>=0.19",
    # Phase 1 tokenizer + phonological init (card e1644700)
    "cmudict>=1.0",
    "panphon>=0.20",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pyright>=1.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
